# structout

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/lib/: Cargo.toml  lib.rs
src/test_fixtures/testbed/: Cargo.toml  generics.rs  mod.rs  simple.rs  visibility.rs  wheres.rs
test_fixtures/testbed/: Cargo.toml  as_tuple.rs  generics.rs  include.rs  mod.rs  only.rs  shared_attrs.rs  simple.rs  upsert.rs  visibility.rs  wheres.rs
