[package]
name = "struct_gen"
version = "0.0.1"
edition = "2018"

[dependencies]
syn = { version = "*", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = "*"
quote = "*"
linked_hash_set = "*"

[lib]
proc-macro = true
path = "src/lib.rs"

[dev-dependencies]
path-clean = "0.1.0"
insta = "*"
