[package]
name = "struct_gen"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.44", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = "1.0.24"
quote = "1.0.7"
linked_hash_set = "0.1.4"

[lib]
proc-macro = true
path = "src/lib.rs"

[dev-dependencies]
path-clean = "0.1.0"
insta = "1.1.0"
