[package]
name = "structout"
authors = ["resolritter <joao.paulo.silvasouza@hotmail.com>"]
description = "A proc-macro for generating structs from a common definition"
homepage = "https://github.com/resolritter/structout"
repository = "https://github.com/resolritter/structout"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
license = "BSD-3-Clause"
version = "0.6.0"
edition = "2018"

[dependencies]
syn = { version = "1.0.44", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = "1.0.24"
quote = "1.0.7"
linked_hash_set = "0.1.4"

[lib]
proc-macro = true
path = "src/lib.rs"

[dev-dependencies]
path-clean = "0.1.0"
insta = "1.1.0"
